--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -13,11 +13,12 @@
       </div>
    <%end%>
 
-      <div>
-      <%= form.label :user_id, "Pasniedzējs"%>
-      <%= form.collection_select( :user_id, User.all, :id, :first_name, prompt: true ) %>
-    </div>
 
+      <div>
+      <%= form.label :user_id, "Dalībnieks"%>
+      <%= form.collection_select( :user_id, User.all, :id, :user_value, prompt: true ) %>
+    </div>  
+  
       <div>
       <%= form.label :course_id, "Kurss"%>
       <%= form.collection_select( :course_id, Course.all, :id, :title, prompt: true ) %>
