--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,15 +17,15 @@
        <%= form.label :first_name, "Vārds"%> 
        <%= form.text_field :first_name%> 
     </div>
-
+      <br>
     <div>
        <%= form.label :last_name, "Uzvārds"%> 
        <%= form.text_field :last_name%> 
     </div>
 
     <div>
-      <%= form.label :teacher, "Vai lietotājs ir pasniedzējs?"%>
-       <%= form.check_box :teacher %>
+      <%= form.label :teacher, "Lietotāja tips"%>
+       <%= form.select :teacher, [['Students', false],['Pasniedzējs', true]] %>
     </div>
 
     <div>
