--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h1>Lietotājs <%= @user.first_name %></h1>
+<h1>Lietotājs <%= @user.first_name %> <%= @user.last_name %></h1>
 
 <p>
   <strong>Vārds:</strong>
@@ -17,4 +17,43 @@
 </p>
 
 <%= link_to 'Labot', edit_user_path(@user) %> |
-<%= link_to 'Atpakaļ', users_path %>
+<%= link_to 'Atpakaļ', users_path %> 
+
+
+<p>
+
+  <h2>Pieteicies kursiem:</h2>
+
+  <table id="user_attencdance">
+    <thead>
+        <tr>
+            <th>Nosaukums</th>
+            <th>Apraksts</th>
+            <th>Sākuma datums</th>
+            <th>Beigu datums</th>
+            <th>Minimālais pieteikumu skaits</th>
+            <th>Maksimālais pieteikumu skaits</th>
+            <th>Pasniedzējs</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <% @user.courses.each do |course| %>
+
+            <tr data-course-id="<%= course.id %>">
+                <td data-course-attribute="title"><%= link_to course.title, course_path(course) %></td>
+                <td data-course-attribute="description"><%= course.description %></td>
+                <td data-course-attribute="start_date"><%= course.start_date %></td>
+                <td data-course-attribute="end_date"><%= course.end_date %></td>
+                <td data-course-attribute="min_number"><%= course.min_number %></td>
+                <td data-course-attribute="max_number"><%= course.max_number %></td>
+                <td data-course-attribute="user_id"><%= course.user.first_name %><%= course.user.last_name %></td>
+
+
+            </tr>
+
+        <% end %>
+    </tbody>
+
+</table>
+</p>
