--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
     <div id="logo_text">
       <h1>
         <%= link_to root_path do %>
-          Kursi <span class="logo_colour">2019</span> 
+          Kursi 2019
         <% end %>
       </h1>
 
